--- a/public/index.html
+++ b/public/index.html
@@ -2,26 +2,14 @@
 <html>
 <head>
   <title>Test</title>
+  <base href="/">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-resource.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="js/app.js"></script>
 </head>
-<body ng-app="UserApp" ng-controller="PlaneCtrl">
-  <form ng-submit="formSubmit()">
-    <input type="text" ng-model="plane.manufacturer">
-    <input type="text" ng-model="plane.model">
-    <input type="number" ng-model="plane.engines">
-    <input type="submit">
-  </form>
-  <div ng-repeat="plane in planes track by plane._id">
-    <div class="well">
-      <h3>Manufacturer: {{plane.manufacturer}}</h3>
-      <h5>Model: {{plane.model}}</h5>
-      <p>Engine Count: {{plane.engines}}</p>
-      <button class="btn btn-danger" ng-click="delete(plane._id, $index)">Delete</button>
-    </div>
-  </div>
+<body ng-app="UserApp">
+  <div ui-view></div>
 </body>
 </html>
